Fix: overflow: hidden on digitdisplayvisible

--- a/style.css
+++ b/style.css
@@ -256,7 +256,7 @@ div.digitDisplayVisibleArea {
 	width: 100%;
 	height: 80%;
 	top: 10%;
-	overflow: clip;
+	overflow: hidden;
 	box-sizing: border-box;
 	border: 0;
 	margin: 0;
